--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+git://github.com/gmioannou/python-sld.git#egg=python-sld
-git+git://github.com/hishamkaram/ags2sld.git#egg=ags2sld
-esridump==1.8.0
+git+git://github.com/cartologic/python-sld.git#egg=python-sld
+git+git://github.com/cartologic/ags2sld.git#egg=ags2sld
+git+git://github.com/openaddresses/pyesridump.git@d2e15d0#egg=esridump
